--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   background-color: #efefef;
   margin: 0px;
+  min-width: 375px;
 }
 
 .hidden {
